# ShootingStars

./: .gitmodules  README.md
Linear_solvers/: CMakeLists.txt  Doxyfile  Matrix.cpp  Matrix.h  README.md  Utils.h  main.cpp
Linear_solvers/Solution/: Sol.mat
Linear_solvers/data/: Mat.mat  MatSDP.mat  MatSparceLU.mat  U_sparse.txt  VecLU.mat  sparse_chol.txt
Linear_solvers/data/Interface/: Vec.mat
Linear_solvers/data/ItSolver/: ComplexVecB.txt  ComplexVecSol.txt  Mat4x4.txt  VecB4x1.txt  VecSol2x1.txt  VecSol4x1.txt
Linear_solvers/data/NonItSolver/: ComplexCholA.txt  ComplexCholR.txt  ComplexCholSol.txt  ComplexL.txt  ComplexLUP.txt  ComplexLUPA.txt  ComplexLUPsol.txt  ComplexLU_sol.txt  ComplexU.txt  L_sparse.txt  Sol.txt  sparseA.txt  sparseA2.txt
Linear_solvers/data/Vector/: ComplexMat.mat  ComplexVec.mat  Res1.txt  Res2.txt
Linear_solvers/src/: CMakeLists.txt  Cholesky.cpp  Cholesky.h  CommandLineReader.cpp  CommandLineReader.h  ComplexNumber.cpp  Conjugate_Gradient.cpp  Conjugate_Gradient.h  Conjugate_gradient.cpp  Conjugate_gradient.h  FileReader.cpp  FileReader.h  For_Stella  Gauss_Seidel.cpp  Gauss_Seidel.h  Interface.h  Iterative_Solver.cpp  Iterative_Solver.h  Jacobi.cpp  Jacobi.h  LU.cpp  LU.h  LinearSolver.h  MainVecMat.cpp  Matrix.cpp  Matrix.h  MatrixPointer.cpp  MatrixV.cpp  NonIterative_Solver.cpp  NonIterative_Solver.h  Reader.cpp  Reader.h  Richardson.cpp  Richardson.h  Solver.h  Solvers.cpp  Test.cpp  TestInterface.cpp  TestIterativeSolver.cpp  TestIterativeSolver2.cpp  (+8 more)
Linear_solvers/test/: InterfaceTest.cpp  ItSolverTest.cpp  MatSDP.mat  MatrixTest.cpp  NonItSolverTest.cpp  VecSDP.mat  VectorTest.cpp
